--- a/style.css
+++ b/style.css
@@ -1,4 +1,18 @@
 *{
     box-sizing: border-box;
     margin: 0;
+      font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 100;
+    font-style: normal;
+
+/* .roboto{
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+} */
 }
+
+
