--- a/style.css
+++ b/style.css
@@ -34,10 +34,13 @@
     color: #F9FAF8;
 }
 
-.call_to_action_color{
+.call_to_action{
     background-color: #3882F6;
     color: #E5E7EB;
     font-weight: 700;
+    border-radius: 5px;
+    padding: 4px 15px 4px 15px;
+    border: 0px;
 }
 
 .information_header_text{
@@ -89,6 +92,15 @@
     padding: 50px;
     gap: 10px;
 }
+
+.first-layer .container{
+    display:flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 4px;
+    
+}
+
 .first-layer img{
     width: 250px;
     height: auto;
