--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
     font-optical-sizing: auto;
     font-weight: 100;
 }
-
 /* .roboto{
   font-family: "Roboto", sans-serif;
   font-optical-sizing: auto;
@@ -135,7 +134,17 @@
     font-size: 18px;
 }
 
-.quote_text{
-    text-align: center;
-    margin: 100px;
+.third-layer .container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin: 100px 200px;
+
+}
+.quote_name{
+    align-self: flex-end;
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 500;
+
 }
