--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    min-width: 100vh;
 }
 
 .first_layer_wrapper{
@@ -73,7 +74,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: stretch;
-    padding: 0px 150px 100px 150px;
+    padding: 0px 200px 100px 200px;
 }
 
 .header{
